--- a/PbLab.DesginPatterns.App.Tests/PbLab.DesginPatterns.App.Tests.csproj
+++ b/PbLab.DesginPatterns.App.Tests/PbLab.DesginPatterns.App.Tests.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Services\CsvSamplesReaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ReaderFactorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
