Singleton - id for sample

--- a/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
+++ b/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Model\MassValue.cs" />
     <Compile Include="Model\Sample.cs" />
     <Compile Include="Services\CsvSamplesReader.cs" />
+    <Compile Include="Services\IdGenerator.cs" />
     <Compile Include="Services\IReaderFactory.cs" />
     <Compile Include="Services\ReaderFactory.cs" />
     <Compile Include="Services\XmlSamplesReader.cs" />
