Object Pool - pool of readers

--- a/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
+++ b/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
@@ -72,6 +72,9 @@
     <Compile Include="Model\MassValue.cs" />
     <Compile Include="Model\Sample.cs" />
     <Compile Include="Model\MassValueBuilder.cs" />
+    <Compile Include="Tools\IFactory.cs" />
+    <Compile Include="Tools\ObjectsPool.cs" />
+    <Compile Include="Services\LocalFileReaderPool.cs" />
     <Compile Include="Services\StatsBuilder.cs" />
     <Compile Include="Services\CsvSamplesReader.cs" />
     <Compile Include="Services\IdGenerator.cs" />
