Fasade - read all samples from all files

--- a/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
+++ b/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Services\JsonSamplesReader.cs" />
     <Compile Include="Services\ReportPrototype.cs" />
     <Compile Include="Tools\FileProxy.cs" />
+    <Compile Include="Services\SourceReader.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
