--- a/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
+++ b/PbLab.DesignPatterns.App/PbLab.DesignPatterns.App.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Audit\ThreadDecorator.cs" />
     <Compile Include="Audit\ILogger.cs" />
     <Compile Include="Audit\AppDomainDecorator.cs" />
+    <Compile Include="Collections\VendingMachine.cs" />
     <Compile Include="Communication\ChanelFactory.cs" />
     <Compile Include="Communication\HttpChanel.cs" />
     <Compile Include="Communication\FileChanel.cs" />
